--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,10 +14,12 @@
     "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-query": "^3.39.3",
     "react-router": "^6.20.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "tailwind-merge": "^2.1.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
