--- a/back-end/package.json
+++ b/back-end/package.json
@@ -12,12 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "@libsql/client": "^0.4.0-pre.2",
+    "bcrypt": "^5.1.1",
     "better-sqlite3": "^9.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.29.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "uuid": "^9.0.1"
   },
@@ -26,6 +29,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
+    "@types/node": "^20.10.4",
     "drizzle-kit": "^0.20.4",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
