--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,21 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-tailwind/react": "^2.1.8",
     "@tanstack/react-query": "^5.17.9",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.63",
-    "@types/react": "^18.2.38",
-    "@types/react-dom": "^18.2.16",
     "axios": "^1.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-modal": "^3.16.1",
-    "react-query": "^3.39.3",
     "react-router": "^6.20.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
@@ -50,6 +44,11 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^16.18.63",
+    "@types/jest": "^27.5.2",
+    "@types/react": "^18.2.38",
+    "@types/react-dom": "^18.2.16",
+    "@types/react-modal": "^3.16.3",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5"
